--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.type: com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6154830?useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.name=sql6154830
-spring.datasource.username=sql6154830
-spring.datasource.password=5Asamrxrtt
+# DataSource settings: set here configurations for the database connection
+spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6154830?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username = sql6154830
+spring.datasource.password = 5Asamrxrtt
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Specify the DBMS
+spring.jpa.database = MYSQL
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+
+# Hibernate settings are prefixed with spring.jpa.hibernate.*
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
