--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6154830?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username = sql6154830
 spring.datasource.password = 5Asamrxrtt
-spring.datasource.driverClassName = com.zaxxer.hikari.HikariDataSource
+spring.datasource.driverClassName = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
